--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.21.5",
         "file-loader": "^6.0.0",
+        "jquery": "^3.6.0",
         "node-sass": "^5.0.0",
+        "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.2",
         "sass-lint": "^1.13.1",
         "sass-loader": "^10.0.5",
@@ -23,5 +25,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap": "4"
     }
 }
