--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,7 +29,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: home_index
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
