--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
         "eslint-plugin-react": "^7.21.5",
         "file-loader": "^6.0.0",
         "jquery": "^3.6.0",
-        "node-sass": "^5.0.0",
         "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.34.1",
         "sass-lint": "^1.13.1",
         "sass-loader": "^10.0.5",
         "stimulus": "^2.0.0",
