Integration CRUD + gestion login / logout

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,6 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
             lazy: true
             provider: users_in_memory
             guard:
@@ -42,3 +41,4 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    enable_authenticator_manager: true
