--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@popperjs/core": "^2.9.2",
         "bootstrap": "4"
     }
 }
