--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
-        "bootstrap": "4"
+        "bootstrap": "4",
+        "list.js": "^2.3.1"
     }
 }
