--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "symfony/webpack-encore-bundle": "^1.11",
     "symfony/yaml": "5.2.*",
     "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0"
+    "twig/twig": "^2.12|^3.0",
+    "vich/uploader-bundle": "^1.18"
   },
   "require-dev": {
     "friendsoftwig/twigcs": ">=4",
