--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,6 +5,7 @@ vich_uploader:
         project_file:
             uri_prefix: /project
             upload_destination: '%upload_directory%'
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
