Page Members, Page Organizations, Ajout lien vers administration dans navbar > Profil

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,4 +42,5 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/dashboard, roles: ROLE_USER }
+         - { path: ^/member, roles: ROLE_USER }
     enable_authenticator_manager: true
