--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "symfony/web-link": "5.2.*",
     "symfony/webpack-encore-bundle": "^1.11",
     "symfony/yaml": "5.2.*",
-    "twig/extra-bundle": "^2.12|^3.0",
+    "twig/extra-bundle": "^3.3",
+    "twig/intl-extra": "^3.3",
     "twig/twig": "^2.12|^3.0",
     "vich/uploader-bundle": "^1.18"
   },
