--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "doctrine/doctrine-migrations-bundle": "^3.1",
     "doctrine/orm": "^2.8",
     "easycorp/easyadmin-bundle": "^3.3",
+    "friendsofsymfony/ckeditor-bundle": "^2.3",
     "phpdocumentor/reflection-docblock": "^5.2",
     "sensio/framework-extra-bundle": "^5.1",
     "symfony/asset": "5.2.*",
